# cif-tools

./: .gitignore  Cargo.toml  PYTHON_BINDGEN_README.md  README.md  RELEASE.md  WASM_BINDGEN_README.md  install-hooks.sh  justfile  node-example.js  package-lock.json  pyproject.toml  wasm-demo.html
.githooks/: pre-commit
.github/workflows/: bench.yml  lint-and-format.yml  publish-npm.yml  publish-python.yml  publish-rust.yml  release.yml  test.yml
crates/cif-parser/: Cargo.toml  README.md
crates/cif-parser/benches/: parsing.rs
crates/cif-parser/docs/: version_strategy_with_options.md
crates/cif-parser/examples/: file_io.rs  type_checking_example.py  version_detection.py
crates/cif-parser/src/: builder.rs  cif.pest  error.rs  lib.rs  python.rs  wasm.rs
crates/cif-parser/src/ast/: block.rs  document.rs  frame.rs  loop_struct.rs  mod.rs  span.rs  value.rs
crates/cif-parser/src/grammar/: cif.pest
crates/cif-parser/src/parser/: block.rs  document.rs  helpers.rs  loop_parser.rs  mod.rs  options.rs  value.rs
crates/cif-parser/src/raw/: mod.rs
crates/cif-parser/src/raw/ast/: block.rs  document.rs  mod.rs  value.rs
crates/cif-parser/src/raw/parser/: block.rs  helpers.rs  loop_parser.rs  mod.rs  value.rs
crates/cif-parser/src/rules/: cif1.rs  cif2.rs  helpers.rs  mod.rs  violation.rs
crates/cif-parser/tests/: ast.rs  integration.rs  parser.rs
crates/cif-parser/tests/ast/: document_tests.rs  frame_tests.rs  loop_tests.rs  span_tests.rs  value_tests.rs
crates/cif-parser/tests/example_cifs/LuAg/: crystalmaker_LuAG.cif  jana2020_LuAG.cif
crates/cif-parser/tests/example_cifs/albite/: pets2_albite.cif_pets
crates/cif-parser/tests/example_cifs/glycine/: jana2006_glycine.cif  pets2_glycine.cif_pets
crates/cif-parser/tests/example_cifs/mordenite/: mordenite_s1m1_filter_dyn_s3m7.cif_pets
crates/cif-parser/tests/example_cifs/quartz/: pycifrw_quartz.cif
crates/cif-parser/tests/example_cifs/urea/: cod_urea.cif
crates/cif-parser/tests/fixtures/: simple.cif
crates/cif-parser/tests/integration/: ccdc_paracetamol.rs  cod_urea.rs  crystalmaker_luag.rs  pycifrw_xanthine.rs  shared_fixtures.rs  synthetic_tests.rs
crates/cif-parser/tests/integration/fixtures/: ccdc_paracetamol.cif
crates/cif-parser/tests/integration/fixtures/example_cifs/natrolite/: jana2006_natrolite.cif
crates/cif-parser/tests/parser/: grammar_tests.rs  semantic_tests.rs
crates/cif-validator/: Cargo.toml  README.md
crates/cif-validator/benches/: dictionary_loading.rs
crates/cif-validator/src/: error.rs  lib.rs  python.rs  validated.rs  wasm.rs
crates/cif-validator/src/dictionary/: loader.rs  mod.rs  types.rs  validator.rs
crates/cif-validator/src/validator/: engine.rs  mod.rs
crates/cif-validator/tests/: cif_core_test.rs  performance_test.rs
crates/drel-parser/: Cargo.toml
crates/drel-parser/src/: drel.pest  error.rs  lib.rs
crates/drel-parser/src/analysis/: dependencies.rs  mod.rs  references.rs
crates/drel-parser/src/ast/: expr.rs  mod.rs  operator.rs  span.rs  stmt.rs
crates/drel-parser/src/parser/: expr.rs  helpers.rs  mod.rs  stmt.rs
crates/drel-parser/tests/: real_drel_tests.rs
docs/: ast-construction.md  benchmarking.md  cif-format-hierarchy.md  cif-parser-performance-optim-progress.md  cif-validator.md  cif-version-support.md  cif-versions.md  dictionaries.md  drel-parser.md  grammar-notes.md  monorepo.md  parser.md  performance-learnings.md  performance.md  python-bindings.md  spans.md  validator.md  wasm-bindings.md
examples/: advanced_features.rs  basic_usage.rs  duckdb_integration.py  mmcif_parser.rs  version_detection.js
fixtures/: README.md  cif2_comprehensive.cif  cif2_lists.cif  cif2_tables.cif  complex.cif  loops.cif  simple.cif
fixtures/example_cifs/carbamazepine/: jana2006_carbamazepine.cif
fixtures/example_cifs/quartz/: ccdc_quartz.cif
fixtures/validation/: invalid_structure.cif  test_validation.dic  valid_structure.cif
javascript/: README.md  biome.json  package-lock.json  package.json
javascript/demo/: index.html  package.json  vite.config.js
javascript/demo/src/: main.js
javascript/examples/: node-example.js  typescript-example.ts
javascript/tests/: basic.test.js  integration.test.js
python/: README.md  pyproject.toml
python/cif-parser/: README.md  pyproject.toml
python/cif-parser/examples/: duckdb_integration.ipynb  type_checking_example.ipynb  version_detection.ipynb
python/cif-parser/src/cif_parser/: __init__.py  __init__.pyi
python/cif-parser/tests/: conftest.py  test_integration.py
python/cif-validator/: README.md  pyproject.toml
python/cif-validator/examples/: basic_validation.ipynb  diffbloch_validation.ipynb
python/cif-validator/examples/.ipynb_checkpoints/: basic_validation-checkpoint.ipynb
python/cif-validator/examples/diffbloch/: DIFFBLOCH_DICTIONARY_NOTES.md  diffBloch.dic  diffbloch_2.dic  dynamical_iam_invalid.cif  dynamical_iam_valid.cif  urea_invalid.cif  urea_valid.cif
python/cif-validator/src/cif_validator/: __init__.py  __init__.pyi  _cif_validator.pyi
python/cif-validator/tests/: conftest.py  test_validator_integration.py
python/cif_parser/: __init__.py  __init__.pyi  _cif_parser.pyi
python/tests/: conftest.py  test_block.py  test_document.py  test_errors.py  test_frame.py  test_integration.py  test_loop.py  test_values.py
src/: builder.rs  cif.pest  error.rs  lib.rs  lib.rs.backup  python.rs  wasm.rs
src/ast/: block.rs  document.rs  frame.rs  loop_struct.rs  mod.rs  value.rs
src/parser/: block.rs  document.rs  helpers.rs  loop_parser.rs  mod.rs  value.rs
tests/: blockname_test.rs  cif2_tests.rs  debug_empty_list.rs  debug_table_triple_quote.rs  debug_triple_quote_keys.rs  debug_version.rs  grammar_test.rs  integration_tests.rs  pest_list_test.rs
tests/ast/: block_tests.rs  value_tests.rs
tests/example_cifs/abiraterone_acetate/: abiraterone_acetate.cif
tests/example_cifs/albite/: jana2006_albite.cif
tests/example_cifs/hen_egg_white_lysozyme/: ccdc_hen_egg_white_lysozyme.cif
tests/example_cifs/mordenite/: jana2006_mordenite.cif
tests/fixtures/: simple.cif
(+2 files in other folders)
