[workspace]
resolver = "2"
members = [
    "crates/cif-parser",
    "crates/cif-validator",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Iain Maitland <iain@iainmaitland.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Differentiable-Electron-Crystallography/cif-tools"

[workspace.dependencies]
# Parser dependencies
pest = "2.6"
pest_derive = "2.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WASM bindings
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Python bindings
pyo3 = { version = "0.26", features = ["extension-module"] }

# Inter-crate dependencies (path-based)
cif-parser = { path = "crates/cif-parser" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[profile.release]
lto = true
codegen-units = 1
