[project]
name = "cif-tools"
version = "0.0.0"
description = "CIF tools workspace - parser and validator"
requires-python = ">=3.8,<3.13"

[project.optional-dependencies]
dev = ["pytest>=6.0", "pytest-benchmark", "mypy", "black", "ruff", "maturin>=1.0"]

[tool.uv.workspace]
members = ["cif-parser", "cif-validator"]

# Allow workspace members to reference each other
[tool.uv.sources]
cif-parser = { workspace = true }
cif-validator = { workspace = true }

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [".*/tests/", ".*/examples/"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
extend-exclude = '''
diffBloch-repo
'''

[tool.ruff]
target-version = "py38"
line-length = 88
extend-exclude = ["*.ipynb", "diffBloch-repo"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["*/tests"]
python_files = ["test_*.py", "*_test.py"]
