[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "cif-validator"
description = "DDLm-based CIF validation library written in Rust"
authors = [
    {name = "Iain Maitland", email = "iain@iainmaitland.com"}
]
license = {text = "MIT OR Apache-2.0"}
readme = "README.md"
homepage = "https://github.com/Differentiable-Electron-Crystallography/cif-tools"
repository = "https://github.com/Differentiable-Electron-Crystallography/cif-tools"
documentation = "https://docs.rs/cif-validator"
keywords = ["cif", "crystallography", "validator", "ddlm", "validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Typing :: Typed",
]
requires-python = ">=3.8,<3.13"
dynamic = ["version"]
dependencies = ["cif-parser"]

[project.urls]
Homepage = "https://github.com/Differentiable-Electron-Crystallography/cif-tools"
Repository = "https://github.com/Differentiable-Electron-Crystallography/cif-tools"
Documentation = "https://docs.rs/cif-validator"
"Bug Reports" = "https://github.com/Differentiable-Electron-Crystallography/cif-tools/issues"

[tool.maturin]
features = ["pyo3/extension-module", "python"]
python-source = "src"
module-name = "cif_validator._cif_validator"
manifest-path = "../../crates/cif-validator/Cargo.toml"

[tool.uv.sources]
cif-parser = { workspace = true }
